<?xml version="1.0" encoding="utf-8"?>

<resources>

    <!-- Title for the application -->
    <string name="app_name">The Brexit Guardian</string>

    <!-- News List Item XML strings -->
    <string name="article_image">Article Thumbnail</string>

    <string name="headline">Article Headline</string>

    <string name="section">Section</string>

    <string name="author">Author</string>

    <string name="date">Publication Date</string>

    <!-- Settings Menu Item -->
    <string name="settings_menu_item">Settings</string>

    <!-- Setting Activity Title -->
    <string name="settings_title">Article Settings</string>

    <!-- Strings For Order-By Preferences -->
    <string name="settings_order_label">Order By</string>

    <string name="settings_order_by_key" translatable="false">order-by</string>

    <string name="settings_order_key" translatable="false">@string/settings_order_by_most_recent_value</string>

    <string name="settings_order_default" translatable="false">@string/settings_order_by_relevance_value</string>

    <!-- Label for Order-by Relevance -->
    <string name="settings_order_by_relevance_label">Relevance</string>

    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <!-- Label for Order-by Most Recent -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>

    <string name="settings_order_by_most_recent_value" translatable="false">newest</string>

    <!-- Disrupted Service strings -->
    <string name="no_articles_found">No Articles found.</string>

    <string name="no_internet_connection">No Internet connection.</string>

</resources>
